modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/Namespace-karakeep.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: karakeep
