modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/Deployment-karakeep-chrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: chrome
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: karakeep-0.31.0
  name: karakeep-chrome
  namespace: karakeep
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: chrome
      app.kubernetes.io/instance: karakeep
      app.kubernetes.io/name: karakeep
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: chrome
        app.kubernetes.io/instance: karakeep
        app.kubernetes.io/name: karakeep
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --headless
            - --hide-scrollbars
            - --disable-gpu
            - --disable-dev-shm-usage
          image: gcr.io/zenika-hub/alpine-chrome:124
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 9222
            timeoutSeconds: 1
          name: chrome
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 9222
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - SYS_ADMIN
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /tmp
              name: chrome-tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - emptyDir: {}
          name: chrome-tmp
