modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/StatefulSet-karakeep.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: karakeep
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/version: 0.32.0
    helm.sh/chart: karakeep-0.32.0
  name: karakeep
  namespace: karakeep
spec:
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: karakeep
      app.kubernetes.io/instance: karakeep
      app.kubernetes.io/name: karakeep
  serviceName: karakeep
  template:
    metadata:
      labels:
        app.kubernetes.io/component: karakeep
        app.kubernetes.io/instance: karakeep
        app.kubernetes.io/name: karakeep
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: BROWSER_WEB_URL
              value: http://karakeep-chrome:9222
            - name: DATA_DIR
              value: /data
            - name: MEILI_ADDR
              value: http://karakeep-meilisearch:7700
            - name: NEXTAUTH_URL
              value: https://karakeep.noosphere.uk
            - name: OAUTH_ALLOW_DANGEROUS_EMAIL_ACCOUNT_LINKING
              value: "true"
            - name: OAUTH_PROVIDER_NAME
              value: Pocket ID
            - name: OAUTH_SCOPE
              value: openid email profile
            - name: OAUTH_WELLKNOWN_URL
              value: https://id.noosphere.uk/.well-known/openid-configuration
          image: ghcr.io/karakeep-app/karakeep:0.32.0
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
          name: karakeep
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
