modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/Service-karakeep-meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: meilisearch-0.12.0
  name: karakeep-meilisearch
  namespace: karakeep
spec:
  ports:
    - name: http
      port: 7700
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/name: meilisearch
  type: ClusterIP
