modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/Service-karakeep.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/service: karakeep
    app.kubernetes.io/version: 0.33.1
    helm.sh/chart: karakeep-0.33.1
  name: karakeep
  namespace: karakeep
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/component: karakeep
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/name: karakeep
  type: ClusterIP
