modules/noosphere/taghmata/nixidy/manifests/prod/karakeep/Ingress-karakeep.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: productivity
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Bookmark Management
    glance/icon: di:karakeep
    glance/id: karakeep
    glance/name: Karakeep
    glance/parent: karakeep
    glance/url: https://karakeep.noosphere.uk
  labels:
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/version: 0.32.0
    helm.sh/chart: karakeep-0.32.0
  name: karakeep
  namespace: karakeep
spec:
  rules:
    - host: karakeep.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: karakeep
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - karakeep.noosphere.uk
      secretName: karakeep-tls
